# Ecom-bot

./: .env.example  .gitignore  app.py  main.py  pyproject.toml  system_message.txt
data/: faq.json
src/Clients/: CloudOpenaiClient.py  LlmInterface.py
src/configs/: ConfigBase.py  LlmConfig.py  OpenaiConfig.py
